flux/infrastructure/configs/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: main-gateway
  namespace: gateway
  annotations: {}
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: "51.195.15.0"
  infrastructure:
    annotations:
      lbipam.cilium.io/sharing-key: "main-lb"
      lbipam.cilium.io/sharing-cross-namespace: "*"
  listeners:
    - name: https-wildcard
      protocol: HTTPS
      port: 443
      hostname: "*.p2bid.global"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wildcard-p2bid-global-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: gitlab-web
      protocol: HTTPS
      port: 443
      hostname: "gitlab.p2bid.global"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wildcard-p2bid-global-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: registry-web
      protocol: HTTPS
      port: 443
      hostname: "glcr.p2bid.global"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wildcard-p2bid-global-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: kas-web
      protocol: HTTPS
      port: 443
      hostname: "glkas.p2bid.global"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wildcard-p2bid-global-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.p2bid.global"
      allowedRoutes:
        namespaces:
          from: All
